adding xml files and adapter classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,29 @@
     <string name="app_name">TheWeather</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="dev_name">Titus Nangi</string>
+    <string name="weather_api_key"></string>
+
+    <string name="tab1">Today</string>
+    <string name="tab2">5 DAYS Forecast</string>
+
+    <string name="settings">Settings</string>
+
+    <string name="hatfield">Pretoria</string>
+    <string name="pretoria">Pretoria</string>
+
+    <!-- CurrentWeatherFragment all strings -->
+    <string name="today">Today</string>
+    <string name="sunrise">Sunrise:</string>
+    <string name="senset">Sunset:</string>
+    <string name="humidity">Humidity</string>
+    <string name="pressure">Pressure</string>
+    <string name="max_temp">Max Temp</string>
+    <string name="min_temp">Min Temp</string>
+    <string name="clouds">Clouds</string>
+    <string name="winds">Winds</string>
+    <string name="unit_c">℃</string>
+    <string name="unit_f">℉</string>
+    <string name="degree">Degree</string>
 </resources>
